voting-app/k8s-specifications/vote-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: voting-ingress
  namespace: voting-app

spec:
  rules:
    - host: voting-app.com
      http:
        paths:
          - path: /vote
            pathType: Exact
            backend:
              service:
                name:  vote
                port:
                  number: 80
